# WebSocket-VS-WebRTC

./: .gitignore  README.md  generate_cert.py
cpp_server/: CMakeLists.txt  main.cpp
static/: client.js  index.html
udp_rtt/: server.py
udp_rtt/android_project/: settings.gradle.kts
udp_rtt/android_project/app/: build.gradle.kts
udp_rtt/android_project/app/src/main/: AndroidManifest.xml
udp_rtt/android_project/app/src/main/java/com/example/udprtt/: MainActivity.kt
udp_rtt/android_project/app/src/main/res/layout/: activity_main.xml
udp_rtt/android_project/app/src/main/res/values/: themes.xml
